--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,6 +6,77 @@
     <title>CoLab</title>
 </head>
 <body>
+<nav class="bg-neutral-primary fixed top-0 left-0 w-full z-20 border-b border-default">
+  <div class="max-w-screen-xl mx-auto p-4 flex items-center justify-between">
     
+    <!-- Logo -->
+    <a href="#" class="flex items-center space-x-3">
+      <img src="https://flowbite.com/docs/images/logo.svg" class="h-7" alt="CoLab Logo">
+      <span class="text-xl font-semibold text-heading">CoLab</span>
+    </a>
+
+    <!-- Desktop Search -->
+    <div class="hidden md:block relative">
+      <input
+        type="text"
+        class="ps-9 pe-3 py-2.5 bg-neutral-secondary-medium border border-default-medium 
+               text-heading text-sm rounded-base focus:ring-brand focus:border-brand shadow-xs"
+        placeholder="Search"
+      >
+      <svg class="w-4 h-4 text-body absolute left-3 top-1/2 -translate-y-1/2" fill="none" stroke="currentColor">
+        <path stroke-linecap="round" stroke-width="2" d="m21 21-3.5-3.5M17 10a7 7 0 1 1-14 0 7 7 0 0 1 14 0Z" />
+      </svg>
+    </div>
+
+    <!-- Mobile Buttons -->
+    <div class="flex items-center md:hidden space-x-2">
+      <!-- Search toggle -->
+      <button data-collapse-toggle="navbar-search" 
+              aria-controls="navbar-search"
+              class="w-10 h-10 flex items-center justify-center rounded-base hover:bg-neutral-secondary-soft">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor">
+          <path stroke-linecap="round" stroke-width="2" d="m21 21-3.5-3.5M17 10a7 7 0 1 1-14 0 7 7 0 0 1 14 0Z" />
+        </svg>
+      </button>
+
+      <!-- Menu toggle -->
+      <button data-collapse-toggle="navbar-menu"
+              aria-controls="navbar-menu"
+              class="w-10 h-10 flex items-center justify-center rounded-base hover:bg-neutral-secondary-soft">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor">
+          <path stroke-linecap="round" stroke-width="2" d="M5 7h14M5 12h14M5 17h14"/>
+        </svg>
+      </button>
+    </div>
+
+  </div>
+
+  <!-- Mobile Search Dropdown -->
+  <div id="navbar-search" class="hidden p-4 border-t border-default bg-neutral-primary md:hidden">
+    <div class="relative">
+      <input
+        type="text"
+        class="ps-9 pe-3 py-2.5 bg-neutral-secondary-medium border border-default-medium 
+               text-heading text-sm rounded-base focus:ring-brand focus:border-brand shadow-xs"
+        placeholder="Search"
+      >
+      <svg class="w-4 h-4 text-body absolute left-3 top-1/2 -translate-y-1/2" fill="none" stroke="currentColor">
+        <path stroke-linecap="round" stroke-width="2" d="m21 21-3.5-3.5M17 10a7 7 0 1 1-14 0 7 7 0 0 1 14 0Z" />
+      </svg>
+    </div>
+  </div>
+
+  <!-- Mobile Navigation Menu -->
+  <div id="navbar-menu" class="hidden bg-neutral-primary border-t border-default p-4 md:hidden">
+    <ul class="flex flex-col space-y-3">
+      <li><a href="#" class="text-heading hover:text-fg-brand">Home</a></li>
+      <li><a href="#" class="text-heading hover:text-fg-brand">About</a></li>
+      <li><a href="#" class="text-heading hover:text-fg-brand">Services</a></li>
+    </ul>
+  </div>
+</nav>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+
 </body>
 </html>
