navbar is better ig

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -15,7 +15,7 @@
 <!-- Header/Navbar -->
 <section class="header">
   <nav>
-    <a href="index.html" class="logo"><img src="images/logo.png" alt="CoLab Logo"><span>CoLab</span></a>
+    <a href="index.html" class="logo"><img src="/images/CoLab.png" alt="CoLab Logo"><span>CoLab</span></a>
     <div class="nav-links" id="navLinks">
        <i class="fa-solid fa-xmark" onclick="hideMenu()" role="button" tabindex="0" aria-label="Close menu"></i>
       <ul>
