checked the navbar pages

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -25,10 +25,11 @@
         <i class="fa-solid fa-xmark close-icon" onclick="hideMenu()" aria-label="Close menu"></i>
         <ul>
             <li><a href="index.html" class="active">HOME</a></li>
-            <li><a href="About-Us.html">ABOUT US</a></li>
-            <li><a href="event-page.html">EVENTS</a></li>
+            <li><a href="about.html">ABOUT US</a></li>
+            <li><a href="events/events.html">EVENTS</a></li>
             <li><a href="faq.html">FAQ</a></li>
-            <li><a href="Join-Us.html">JOIN US</a></li>
+            <li><a href="join.html">JOIN US</a></li>
+
         </ul>
     </div>
 
@@ -36,7 +37,7 @@
   </nav>
 
   <div class="text-box">
-        <h1>Welcome to SkillShift Club</h1>
+        <h1>Welcome to CoLab</h1>
         <p>Explore Wushu, Netball, and Dragon Boat.<br>Build skills. Discover your strengths. Lead the way.</p>
         <a href="event-page.html" class="hero-btn">See Upcoming Events</a>
   </div>
