--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -28,7 +28,7 @@
             <li><a href="about.html">ABOUT US</a></li>
             <li><a href="events/events.html">EVENTS</a></li>
             <li><a href="faq.html">FAQ</a></li>
-            <li><a href="join.html">JOIN US</a></li>
+            <li><a href="join.html">LOGIN</a></li>
 
         </ul>
     </div>
@@ -38,8 +38,8 @@
 
   <div class="text-box">
         <h1>Welcome to CoLab</h1>
-        <p>Explore Wushu, Netball, and Dragon Boat.<br>Build skills. Discover your strengths. Lead the way.</p>
-        <a href="event-page.html" class="hero-btn">See Upcoming Events</a>
+        <p>Because every life holds a story worth meeting.<br></p>
+        <a href="join.html" class="hero-btn">Login/Sign Up</a>
   </div>
 </section>
 
