--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -28,7 +28,7 @@
             <li><a href="about.html">ABOUT US</a></li>
             <li><a href="events/events.html">EVENTS</a></li>
             <li><a href="faq.html">FAQ</a></li>
-            <li><a href="join.html">LOGIN</a></li>
+            <li><a href="login.html">LOGIN</a></li>
 
         </ul>
     </div>
@@ -39,7 +39,7 @@
   <div class="text-box">
         <h1>Welcome to CoLab</h1>
         <p>Because every life holds a story worth meeting.<br></p>
-        <a href="join.html" class="hero-btn">Login/Sign Up</a>
+        <a href="login.html" class="hero-btn">Login/Sign Up</a>
   </div>
 </section>
 
